@@ -1,6 +1,7 @@
 Version 2.6.0
 ~~~~~~~~~~~~
 * Fix for rpm build
+* add DifxMessageMark6Activity
 
 Version 2.5.0
 ~~~~~~~~~~~~
